# Backend-Wurqly

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  init.sql  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
alembic/: env.py
alembic/versions/: 001_create_users_table.py
app/api/: main.py
app/api/v1/: activity_logs.py  auth.py  projects.py  screenshots.py  slack.py  tasks.py  time_entries.py  users.py
app/core/: config.py  database.py  deps.py  security.py
app/models/: __init__.py  activity_log.py  project.py  project_member.py  screenshot.py  task.py  time_entry.py  user.py
app/schemas/: __init__.py  activity_log.py  auth.py  project.py  reports.py  screenshot.py  slack.py  task.py  time_entry.py  user.py
app/services/: activity_log.py  project.py  screenshot.py  slack.py  storage.py  task.py  time_entry.py  user.py  websocket.py
docs/: slack_integration.md
tests/: test_auth.py  test_main.py  test_slack.py
